# talipot

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  TulipAppImageToBintray.json.in  appveyor.yml  appveyor_msvc.bat  appveyor_msys2.bat  header.txt  talipot-config.in
demos/clique_import/: CMakeLists.txt  cliqueimport.cpp
demos/graph_display/: CMakeLists.txt  graph_display.cpp
demos/graph_manipulations/: CMakeLists.txt  graphmanipulations.cpp
demos/interactor_plugin/: CMakeLists.txt  interactor_plugin.cpp
doc/: CMakeLists.txt
doc/common/_templates/: layout.html
doc/developer/: CMakeLists.txt  conf.py.in  doc_guides.rst  graph_format.rst  index.rst  installation.rst  plugin_development.rst  talipot_lib.rst  talipot_libogl.txt  talipot_tutorial.rst
doc/developer/_documents/: ListenerClass.cpp  ListenerClass.h  tutorial001.cpp  tutorial002f.cpp  tutorial002i.cpp  tutorial003.cpp  tutorial004.cpp  tutorial005.cpp  (+11 more)
doc/doxygen/: CMakeLists.txt  doxygen_groups.h  talipot.doxyfile.in
doc/python/: CMakeLists.txt  apichanges.rst  conf.py.in  creatingvisualizations.rst  genSphinxDoc.cmake  gen_plugins_doc.py  gettingstarted.rst  graphalgorithms.rst  graphdatastorage.rst  graphmanipulation.rst  graphobservation.rst  graphvisualattributes.rst  index.rst  manual.rst  pythonplugins.rst  tabulate.py  talipotguireference.rst  talipotpluginsdocumentation.rst  talipotpluginsreference.rst  talipotreference.rst
doc/user/: CMakeLists.txt  algorithm.rst  conf.py.in  functions.rst  gui.rst  index.rst  plugins_management.rst  tutorial_beginner.rst  tutorial_intermediate.rst  workspace.rst
plugins/clustering/: CMakeLists.txt  CliqueEnumeration.cpp  CliqueEnumeration.h  ConvolutionClustering.cpp  ConvolutionClustering.h  ConvolutionClusteringSetup.cpp  ConvolutionClusteringSetup.h  EqualValueClustering.cpp  EqualValueClustering.h  HierarchicalClustering.cpp  HierarchicalClustering.h  QuotientClustering.cpp  StrengthClustering.cpp  StrengthClustering.h
plugins/colors/: CMakeLists.txt  ColorMapping.cpp  DoubleStringsListRelationDialog.cpp  DoubleStringsListRelationDialog.h  DoubleStringsListRelationDialog.ui
plugins/export/: CMakeLists.txt  CSVExport.cpp  CSVExport.h  GMLExport.cpp
plugins/glyph/: CMakeLists.txt  billboard.cpp  christmastree.cpp  circle.cpp  cone.cpp  cross.cpp  cube.cpp  cubeoutlinedtransparent.cpp  cylinder.cpp  diamond.cpp  fonticon.cpp  glowsphere.cpp  hexagone.cpp  pentagone.cpp  ring.cpp  roundedbox.cpp  shadowedsphere.cpp  sphere.cpp  square.cpp  star.cpp  triangle.cpp  window.cpp
plugins/import/: AdjacencyMatrixImport.cpp  CMakeLists.txt  CompleteGraph.cpp  CompleteTree.cpp  ERRandomGraph.cpp  EmptyGraph.cpp  FileSystem.cpp  GEXFImport.cpp  GMLImport.cpp  GMLParser.h  Grid.cpp  ImportPajek.cpp  ImportUCINET.cpp  PlanarGraph.cpp  RandomGraph.cpp  RandomSimpleGraph.cpp  RandomTree.cpp  RandomTreeGeneral.cpp  SmallWorldGraph.cpp  WebImport.cpp  WebImport.h  dotImport.cpp  dotImportCLUT.h  dotImportLexer.h  dotImportLexer.l  dotImportParser.h  dotImportParser.y
plugins/interactor/: CMakeLists.txt  InteractorAddEdge.cpp  InteractorDeleteElement.cpp  InteractorEditEdgeBends.cpp  InteractorGetInformation.cpp  InteractorNavigation.cpp  InteractorRectangleZoom.cpp  InteractorSelection.cpp  InteractorSelectionModifier.cpp
plugins/layout/: BubblePack.cpp  BubbleTree.cpp  BubbleTree.h  CMakeLists.txt  Circular.cpp  Circular.h  ConeTreeExtended.cpp  ConeTreeExtended.h  ConnectedComponentPacking.cpp  ConnectedComponentPacking.h  DatasetTools.cpp  DatasetTools.h  Dendrogram.cpp  Dendrogram.h  FastOverlapRemoval.cpp  FastOverlapRemoval.h  GEMLayout.cpp  GEMLayout.h  HierarchicalGraph.cpp  HierarchicalGraph.h  ImprovedWalker.cpp  ImprovedWalker.h  MixedModel.cpp  MixedModel.h  Number.cpp  Number.h  OrientableConstants.h  OrientableCoord.cpp  OrientableCoord.h  OrientableLayout.cpp  OrientableLayout.h  OrientableLayoutInterface.h  OrientableSize.cpp  OrientableSize.h  OrientableSizeProxy.cpp  OrientableSizeProxy.h  Orientation.cpp  Orientation.h  OrthoTree.cpp  PerfectLayout.cpp  (+20 more)
plugins/metric/: BetweennessCentrality.cpp  BiconnectedComponent.cpp  CMakeLists.txt  ClusterMetric.cpp  ClusterMetric.h  ConnectedComponent.cpp  ConnectedComponent.h  DagLevelMetric.cpp  DagLevelMetric.h  DegreeMetric.cpp  DegreeMetric.h  DepthMetric.cpp  DepthMetric.h  Eccentricity.cpp  Eccentricity.h  IdMetric.cpp  IdMetric.h  KCores.cpp  LeafMetric.cpp  LeafMetric.h  LinkCommunities.cpp  LouvainClustering.cpp  MCLClustering.cpp  NodeMetric.cpp  NodeMetric.h  PageRank.cpp  PathLengthMetric.cpp  PathLengthMetric.h  Random.cpp  Random.h  StrahlerMetric.cpp  StrahlerMetric.h  StrengthMetric.cpp  StrengthMetric.h  StrongComponent.cpp  StrongComponent.h  WelshPowell.cpp
plugins/selection/: CMakeLists.txt  InducedSubGraphSelection.cpp  InducedSubGraphSelection.h  Kruskal.cpp  Kruskal.h  LoopSelection.cpp  LoopSelection.h  MakeSelectionGraph.cpp  MakeSelectionGraph.h  MultipleEdgeSelection.cpp  MultipleEdgeSelection.h  ReachableSubGraphSelection.cpp  ReachableSubGraphSelection.h  SpanningDagSelection.cpp  SpanningDagSelection.h  SpanningTreeSelection.cpp  SpanningTreeSelection.h
plugins/sizes/: AutoSize.cpp  CMakeLists.txt  SizeMapping.cpp
plugins/test/: Acyclic.cpp  Biconnected.cpp  CMakeLists.txt  Connected.cpp  Outerplanar.cpp  Planarity.cpp  Simple.cpp  Tree.cpp  Triconnected.cpp
software/plugin_server/: CMakeLists.txt  PluginPackager.cpp  PluginPusher.cpp  WebDavManager.cpp  WebDavManager.h  pluginpackager.qrc
software/talipot/: CMakeLists.txt
software/talipot_perspective/: CMakeLists.txt
tests/: CMakeLists.txt
tests/external_plugins_build/: CMakeLists.txt  build_and_test_plugin.cmake
tests/include/: CppUnitIncludes.h
tests/plugins/: BasicLayoutTest.cpp  BasicLayoutTest.h  BasicMetricTest.cpp  BasicMetricTest.h  BasicPluginsTest.cpp  BasicPluginsTest.h  CMakeLists.txt  pluginsloadingtest.cpp  pluginstest.cpp
tests/python/: test_graph_properties.py  test_graph_structure.py  test_plugin_registration_and_parameters.py
(+592 files in other folders)
